--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="LinkedOut" parent="Theme.Material3.Light.NoActionBar">
+        <!-- 타이틀 바 숨기기 -->
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">true</item>
+        <!-- 상태 표시줄 색상 설정 -->
+        <item name="android:statusBarColor" >@color/black</item>
+        <item name="android:windowLightStatusBar" >true</item>
+    </style>
 
-    <style name="Theme.LinkedOut" parent="android:Theme.Material.Light.NoActionBar.Fullscreen" />
+
 </resources>
