--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="LinkedOut" parent="Theme.Material3.Light.NoActionBar">
         <!-- 타이틀 바 숨기기 -->
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
         <!-- 상태 표시줄 색상 설정 -->
-        <item name="android:statusBarColor" >@color/black</item>
-        <item name="android:windowLightStatusBar" >true</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowDisablePreview">false</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowDisablePreview">true</item>
+
+
+
+
+<!--        ....-->
+        <item name="android:windowSplashScreenBackground" tools:targetApi="S">@drawable/splash</item>
+<!--        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="S">@drawable/splash</item>-->
+<!--        <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="S">@color/white</item>-->
+    </style>
+
+    <style name="starting" parent="Theme.SplashScreen"
+
+        />
 
 
 </resources>
