--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowDisablePreview">false</item>
+        <item name="android:windowBackground">@color/black</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
